--- a/kubernetes/apps/observability/grafana/app/helm/values.yaml
+++ b/kubernetes/apps/observability/grafana/app/helm/values.yaml
@@ -63,6 +63,21 @@ dashboardProviders:
           path: /var/lib/grafana/dashboards/default
 dashboards:
   default:
+    ceph-cluster:
+      # renovate: depName="Ceph Cluster"
+      gnetId: 2842
+      revision: 18
+      datasource: Prometheus
+    ceph-osd:
+      # renovate: depName="Ceph - OSD (Single)"
+      gnetId: 5336
+      revision: 9
+      datasource: Prometheus
+    ceph-pools:
+      # renovate: depName="Ceph - Pools"
+      gnetId: 5342
+      revision: 9
+      datasource: Prometheus
     cert-manager:
       # renovate: depName="Cert-manager-Kubernetes"
       gnetId: 20842
@@ -78,9 +93,6 @@ dashboards:
       # renovate: depName="External-dns"
       gnetId: 15038
       revision: 3
-      datasource: Prometheus
-    external-secrets:
-      url: https://raw.githubusercontent.com/external-secrets/external-secrets/main/docs/snippets/dashboard.json
       datasource: Prometheus
     kubernetes-api-server:
       # renovate: depName="Kubernetes / System / API Server"
@@ -132,6 +144,12 @@ dashboards:
       gnetId: 11315
       revision: 9
       datasource: Prometheus
+    unifi-pdu:
+      # renovate: depName="UniFi-Poller: PDU Insights - Prometheus"
+      gnetId: 23027
+      revision: 1
+      datasource:
+        - { name: DS_PROMETHEUS, value: Prometheus }
     unifi-network-sites:
       # renovate: depName="UniFi-Poller: Network Sites - Prometheus"
       gnetId: 11311
