--- a/kubernetes/apps/servarr/qbittorrent/ks.yaml
+++ b/kubernetes/apps/servarr/qbittorrent/ks.yaml
@@ -11,9 +11,10 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/gatus/guarded
+    - ../../../../components/volsync
   dependsOn:
-    - name: openebs
-      namespace: openebs-system
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: onepassword-store
       namespace: external-secrets
   interval: 1h
@@ -22,6 +23,7 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: qb
+      VOLSYNC_CAPACITY: 2Gi
   prune: true
   retryInterval: 2m
   sourceRef:
