--- a/kubernetes/apps/servarr/sabnzbd/ks.yaml
+++ b/kubernetes/apps/servarr/sabnzbd/ks.yaml
@@ -11,15 +11,17 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/gatus/guarded
+    - ../../../../components/volsync
   dependsOn:
-    - name: openebs
-      namespace: openebs-system
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
   interval: 1h
   path: ./kubernetes/apps/servarr/sabnzbd/app
   postBuild:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: sab
+      VOLSYNC_CAPACITY: 1Gi
   prune: true
   retryInterval: 2m
   sourceRef:
