--- a/kubernetes/apps/servarr/qbittorrent/app/kustomization.yaml
+++ b/kubernetes/apps/servarr/qbittorrent/app/kustomization.yaml
@@ -3,6 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./externalsecret.yaml
   - ./helmrelease.yaml
 configMapGenerator:
   - name: qbittorrent-loki-rules
@@ -11,7 +12,15 @@ configMapGenerator:
     options:
       labels:
         loki_rule: "true"
+  - name: qbittorrent-scripts
+    files:
+      - scripts/xseed.sh
+  - name: qbittorrent-coredns
+    files:
+      - ./config/Corefile
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
     kustomize.toolkit.fluxcd.io/substitute: disabled
+configurations:
+  - kustomizeconfig.yaml
