config: update cross-seed configs

--- a/kubernetes/apps/servarr/cross-seed/ks.yaml
+++ b/kubernetes/apps/servarr/cross-seed/ks.yaml
@@ -16,6 +16,8 @@ spec:
       namespace: rook-ceph
     - name: onepassword-store
       namespace: external-secrets
+    - name: qbittorrent
+      namespace: servarr
   interval: 1h
   path: ./kubernetes/apps/servarr/cross-seed/app
   postBuild:
