--- a/kubernetes/apps/servarr/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/bazarr/app/helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
     name: app-template
   install:
     remediation:
-      retries: 3
+      retries: -1
   upgrade:
     cleanupOnFail: true
     remediation:
@@ -27,10 +27,7 @@ spec:
               repository: ghcr.io/home-operations/bazarr
               tag: 1.5.2@sha256:e569e3dd344a9a83e948f12eb7fd2c58ab051d0af5507ba69cacfdb5119a8362
             env:
-              TZ: America/New_York
-            envFrom:
-              - secretRef:
-                  name: bazarr-secret
+              TZ: America/Los_Angeles
             probes:
               liveness: &probes
                 enabled: true
@@ -44,7 +41,7 @@ spec:
                   timeoutSeconds: 1
                   failureThreshold: 3
               readiness: *probes
-            securityContext: &securityContext
+            securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
@@ -54,21 +51,6 @@ spec:
                 memory: 256Mi
               limits:
                 memory: 512Mi
-          subcleaner:
-            image:
-              repository: registry.k8s.io/git-sync/git-sync
-              tag: v4.4.0@sha256:0330739a707a2969d617e859f096659ab6d149212658ac0ad7e550b59482ebf0
-            env:
-              GITSYNC_REPO: https://github.com/KBlixt/subcleaner
-              GITSYNC_REF: master
-              GITSYNC_PERIOD: 24h
-              GITSYNC_ROOT: /subcleaner
-            resources:
-              requests:
-                cpu: 10m
-              limits:
-                memory: 128Mi
-            securityContext: *securityContext
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -110,15 +92,5 @@ spec:
         path: /export/Glacier02/Media
         globalMounts:
           - path: /data/nas-media
-      scripts:
-        type: configMap
-        name: bazarr-scripts
-        defaultMode: 0775
-        globalMounts:
-          - path: /scripts/subcleaner.sh
-            subPath: subcleaner.sh
-            readOnly: true
-      subcleaner:
-        type: emptyDir
       tmp:
         type: emptyDir
