--- a/kubernetes/apps/servarr/qbittorrent/app/externalsecret.yaml
+++ b/kubernetes/apps/servarr/qbittorrent/app/externalsecret.yaml
@@ -25,3 +25,29 @@ spec:
         key: proton
     - extract:
         key: cross-seed
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: qbittorrent-gluetun
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    name: qbittorrent-gluetun-secret
+    template:
+      data:
+        auth.toml: |
+          [[roles]]
+          name = "gluetun-qb-port-sync"
+          routes = [
+            "GET /v1/publicip/ip",
+            "GET /v1/openvpn/portforwarded"
+          ]
+          auth = "apikey"
+          apikey = "{{ .QB_GLUETUN_API_KEY }}"
+  dataFrom:
+    - extract:
+        key: qbittorrent
