--- a/kubernetes/apps/servarr/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/qbittorrent/app/helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
     name: app-template
   install:
     remediation:
-      retries: 3
+      retries: -1
   upgrade:
     cleanupOnFail: true
     remediation:
@@ -72,6 +72,7 @@ spec:
                 add:
                   - NET_ADMIN
               allowPrivilegeEscalation: false
+              privileged: true
         containers:
           app:
             image:
