fix: gluetun try more container specific overrides

--- a/kubernetes/apps/servarr/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/qbittorrent/app/helmrelease.yaml
@@ -72,6 +72,8 @@ spec:
                 add:
                   - NET_ADMIN
               privileged: true
+              runAsNonRoot: false
+              runAsUser: 0
         containers:
           app:
             image:
