feat: introduce amd-device-plugin
- https://kubesearch.dev/hr/ghcr.io-bjw-s-helm-app-template-amd-device-plugin

--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: kube-system
 components:
   - ../../components/common
 resources:
+  - ./amd-device-plugin.yaml
   - ./cilium/ks.yaml
   - ./coredns/ks.yaml
   - ./metrics-server/ks.yaml
