--- a/kubernetes/apps/servarr/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/bazarr/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app bazarr
+  name: bazarr
 spec:
   interval: 1h
   chartRef:
@@ -73,7 +73,7 @@ spec:
             sectionName: https
         rules:
           - backendRefs:
-              - name: *app
+              - identifier: app
                 port: *port
     persistence:
       config:
