--- a/kubernetes/apps/default/home-assistant/app/helm/values.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helm/values.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/common-3.7.3/charts/library/common/values.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/common-4.0.1/charts/library/common/values.schema.json
 controllers:
   home-assistant:
     annotations:
@@ -34,7 +34,7 @@ defaultPodOptions:
     fsGroupChangePolicy: OnRootMismatch
 service:
   app:
-    controller: &app home-assistant
+    controller: home-assistant
     ports:
       http:
         port: &port 8123
@@ -49,7 +49,7 @@ route:
         sectionName: https
     rules:
       - backendRefs:
-          - name: *app
+          - identifier: app
             port: *port
 persistence:
   config:
