chore: integrate rbac into app-template based charts
- https://github.com/onedr0p/home-ops/commit/044e71bfd8257279a4ee67f128e5e88a1e088fca

--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -92,11 +92,28 @@ spec:
         ports:
           http:
             port: *port
+    serviceAccount:
+      gatus: {}
     serviceMonitor:
       app:
         serviceName: gatus
         endpoints:
           - port: http
+    rbac:
+      roles:
+        gatus:
+          type: Role
+          rules:
+            - apiGroups: [""]
+              resources: ["configmaps", "secrets"]
+              verbs: ["get", "watch", "list"]
+      bindings:
+        gatus:
+          type: RoleBinding
+          roleRef:
+            identifier: gatus
+          subjects:
+            - identifier: gatus
     route:
       app:
         hostnames:
@@ -110,8 +127,6 @@ spec:
           - backendRefs:
             - identifier: app
               port: *port
-    serviceAccount:
-      gatus: {}
     persistence:
       config:
         existingClaim: gatus
