--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/home-ops/rbac.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/home-ops/rbac.yaml
@@ -4,6 +4,7 @@ kind: ServiceAccount
 metadata:
   name: home-ops-runner
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/clusterrolebinding-rbac-v1.json
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
