chore: refactor tmpfs mounts
- https://github.com/onedr0p/home-ops/commit/b418deabf05286371782bc3d48d97f3c5637a111

--- a/kubernetes/apps/servarr/autobrr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/autobrr/app/helmrelease.yaml
@@ -93,9 +93,12 @@ spec:
     persistence:
       config:
         existingClaim: autobrr
-      config-log:
+      tmpfs:
         type: emptyDir
-        globalMounts:
-          - path: /config/log
-      tmp:
-        type: emptyDir
+        advancedMounts:
+          autobrr:
+            app:
+              - path: /config/log
+                subPath: log
+              - path: /tmp
+                subPath: tmp
