--- a/kubernetes/apps/servarr/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/bazarr/app/helmrelease.yaml
@@ -78,19 +78,20 @@ spec:
     persistence:
       config:
         existingClaim: bazarr
-      config-cache:
-        type: emptyDir
-        globalMounts:
-          - path: /config/cache
-      config-log:
-        type: emptyDir
-        globalMounts:
-          - path: /config/log
       media:
         type: nfs
         server: 100.68.189.69  # helios64.shark-tone.ts.net
         path: /export/Glacier02/Media
         globalMounts:
           - path: /data/nas-media
-      tmp:
+      tmpfs:
         type: emptyDir
+        advancedMounts:
+          bazarr:
+            app:
+              - path: /config/cache
+                subPath: cache
+              - path: /config/log
+                subPath: log
+              - path: /tmp
+                subPath: tmp
