feat: add jellyseerr pushover notification support

--- a/kubernetes/apps/default/webhook/app/resources/hooks.yaml
+++ b/kubernetes/apps/default/webhook/app/resources/hooks.yaml
@@ -1,4 +1,12 @@
 ---
+- id: jellyseerr-pushover
+  execute-command: /config/jellyseerr-pushover.sh
+  command-working-directory: /config
+  pass-arguments-to-command:
+    - source: string
+      name: '{{ getenv "JELLYSEERR_PUSHOVER_URL" }}'
+    - source: entire-payload
+
 - id: radarr-pushover
   execute-command: /config/radarr-pushover.sh
   command-working-directory: /config
