--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -5,18 +5,22 @@ area/bootstrap:
 area/docs:
   - changed-files:
       - any-glob-to-any-file:
-          - "README.md"
+          - README.md
 area/github:
   - changed-files:
       - any-glob-to-any-file: .github/**/*
 area/kubernetes:
   - changed-files:
       - any-glob-to-any-file: kubernetes/**/*
+area/mise:
+  - changed-files:
+      - any-glob-to-any-file:
+          - .mise.toml
 area/renovate:
   - changed-files:
       - any-glob-to-any-file:
-          - ".renovate/**/*"
-          - ".renovaterc.json5"
+          - .renovate/**/*
+          - .renovaterc.json5
 area/scripts:
   - changed-files:
       - any-glob-to-any-file: scripts/**/*
@@ -26,5 +30,5 @@ area/talos:
 area/taskfile:
   - changed-files:
       - any-glob-to-any-file:
-          - ".taskfiles/**/*"
-          - "Taskfile.yaml"
+          - .taskfiles/**/*
+          - Taskfile.yaml
