--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -43,6 +43,14 @@
       "minimumReleaseAge": "3 days"
     },
     {
+      "description": ["Auto-merge Mise Tools"],
+      "matchManagers": ["mise"],
+      "automerge": true,
+      "automergeType": "branch",
+      "matchUpdateTypes": ["patch"],
+      "ignoreTests": true
+    },
+    {
       "description": ["Actions Runner Controller Group"],
       "groupName": "Actions Runner Controller",
       "matchDatasources": ["docker", "helm"],
@@ -166,6 +174,11 @@
       "matchDatasources": ["github-releases"],
       "semanticCommitScope": "github-release",
       "commitMessageTopic": "release {{depName}}"
+    },
+    {
+      "matchManagers": ["mise"],
+      "semanticCommitScope": "mise",
+      "commitMessageTopic": "tool {{depName}}"
     },
     {
       "matchUpdateTypes": ["major"],
