--- a/kubernetes/apps/servarr/recyclarr/app/resources/recyclarr.yaml
+++ b/kubernetes/apps/servarr/recyclarr/app/resources/recyclarr.yaml
@@ -1,7 +1,7 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
 sonarr:
-  main:
+  sonarr:
     base_url: http://sonarr.servarr.svc.cluster.local:8989
     api_key: !env_var SONARR_API_KEY
     delete_old_custom_formats: true
@@ -27,7 +27,7 @@ sonarr:
             score: 0
 
 radarr:
-  main:
+  radarr:
     base_url: http://radarr.servarr.svc.cluster.local:7878
     api_key: !env_var RADARR_API_KEY
     delete_old_custom_formats: true
@@ -47,7 +47,6 @@ radarr:
       - trash_ids:
           - 7a0d1ad358fee9f5b074af3ef3f9d9ef # hallowed
           - b6832f586342ef70d9c128d40c07b872 # Bad Dual Groups
-          - 90cedc1fea7ea5d11298bebd3d1d3223 # EVO (no WEBDL)
           - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5 # No-RlsGroup
           - 7357cf5161efbf8c4d5d0c30b4815ee2 # Obfuscated
           - 5c44f52a8714fdd79bb4d98e2673be1f # Retags
