cross-seed update
- https://github.com/onedr0p/home-ops/commit/97583dba9a82ad436be573ac6d2f913f41a5c71e

--- a/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
@@ -14,6 +14,14 @@ spec:
     template:
       data:
         config.js: |
+          function fetchIndexers(baseUrl, apiKey, tag){
+            const buffer = require('child_process').execSync(`curl -fsSL "$${baseUrl}/api/v1/tag/detail?apikey=$${apiKey}"`);
+            const response = JSON.parse(buffer.toString('utf8'));
+            const indexerIds = response.filter(t => t.label === tag)[0]?.indexerIds ?? [];
+            const indexers = indexerIds.map(i => `$${baseUrl}/$${i}/api?apikey=$${apiKey}`);
+            console.log(`Loaded $${indexers.length} indexers from Prowlarr`);
+            return indexers;
+          }
           module.exports = {
             action: "inject",
             apiKey: "{{.CROSS_SEED_API_KEY}}",
@@ -39,7 +47,8 @@ spec:
             sonarr: [
               "http://sonarr.servarr.svc.cluster.local:8989/?apikey={{ .SONARR_API_KEY }}",
             ],
-            torznab: [],
+            torrentClients: ["qbittorrent:http://qbittorrent.servarr.svc.cluster.local:8080"],
+            torznab: fetchIndexers("http://prowlarr.servarr.svc.cluster.local:80", "{{.PROWLARR_API_KEY}}", "cross-seed"),
             useClientTorrents: true
           };
   dataFrom:
