--- a/kubernetes/apps/servarr/recyclarr/app/resources/recyclarr.yaml
+++ b/kubernetes/apps/servarr/recyclarr/app/resources/recyclarr.yaml
@@ -1,7 +1,7 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
 sonarr:
-  main:
+  sonarr:
     base_url: http://sonarr.servarr.svc.cluster.local:8989
     api_key: !env_var SONARR_API_KEY
     delete_old_custom_formats: true
@@ -18,16 +18,12 @@ sonarr:
           - 82d40da2bc6923f41e14394075dd4b03 # No-RlsGroup
           - e1a997ddb54e3ecbfe06341ad323c458 # Obfuscated
           - 06d66ab109d4d2eddb2794d21526d140 # Retags
-        assign_scores_to:
-          - name: WEB-1080p
-      - trash_ids:
           - 1b3994c551cbb92a2c781af061f4ab44 # Scene
         assign_scores_to:
           - name: WEB-1080p
-            score: 0
 
 radarr:
-  main:
+  radarr:
     base_url: http://radarr.servarr.svc.cluster.local:7878
     api_key: !env_var RADARR_API_KEY
     delete_old_custom_formats: true
