--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -47,7 +47,7 @@
       "matchManagers": ["mise"],
       "automerge": true,
       "automergeType": "branch",
-      "matchUpdateTypes": ["patch"],
+      "matchUpdateTypes": ["minor", "patch"],
       "ignoreTests": true
     },
     {
