--- a/kubernetes/apps/volsync-system/volsync/ks.yaml
+++ b/kubernetes/apps/volsync-system/volsync/ks.yaml
@@ -12,6 +12,8 @@ spec:
   dependsOn:
     - name: snapshot-controller
       namespace: *namespace
+    - name: openebs
+      namespace: openebs-system
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2
       kind: HelmRelease
