update cross-seed config

--- a/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
@@ -25,21 +25,13 @@ spec:
           module.exports = {
             action: "inject",
             apiKey: "{{.CROSS_SEED_API_KEY}}",
-            delay: 30,
-            duplicateCategories: true,
-            flatLinking: false,
-            includeEpisodes: true,
-            includeNonVideos: true,
-            includeSingleEpisodes: true,
             linkCategory: "cross-seed",
             linkDirs: [
               "/data/nas-media/Downloads/qbittorrent/complete/cross-seed"
             ],
             linkType: "hardlink",
-            matchMode: "safe",
-            outputDir: "/config",
+            matchMode: "partial",
             port: Number(process.env.CROSS_SEED_PORT),
-            qbittorrentUrl: "http://qbittorrent.servarr.svc.cluster.local:8080",
             radarr: [
               "http://radarr.servarr.svc.cluster.local:7878/?apikey={{ .RADARR_API_KEY }}",
             ],
