--- a/kubernetes/apps/servarr/qbittorrent/tools/qbtools-config.sops.yaml
+++ b/kubernetes/apps/servarr/qbittorrent/tools/qbtools-config.sops.yaml
@@ -3,12 +3,8 @@ kind: Secret
 metadata:
   name: qbtools-config-secret
 stringData:
-  config.yaml: ENC[AES256_GCM,data:K+p5r5gLZwD6nwOn,iv:0YH3o+PshwMDie5CzAU5U1jXp8rkkP6ke40GMOblF84=,tag:f5/XtaWt58R0BuySut47yw==,type:str]
+  config.yaml: ENC[AES256_GCM,data:NbFlsrm2RrDWUGrIpjKPyG9e0G66TKyB3DpO2/R4e0KWKJX409uGYikXU+POSFgSH40SxE0vnabeNs4A7vJv8p1JsQj1xu0XUckhnu4E1DebmVM7RRVMiTD2TEfAfnN1iry79mL1N2XsmOb1odRlCz7ZSMlylhz6SEIcwZMU,iv:uKtFhiMXkb0DFItsjCFEMwcnrFxc7hhHcPmm16MGI+E=,tag:1mlV9kiaL1/i32QDDn/SiQ==,type:str]
 sops:
-  kms: []
-  gcp_kms: []
-  azure_kv: []
-  hc_vault: []
   age:
     - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
       enc: |
@@ -19,9 +15,8 @@ sops:
         YVQwa0c2LzlQeG0rWU9POFNoR3U0WDAKfkbIlQ3YBX+qqyak0KG/nau7dOCAx/X6
         Bk/pjYSFIeHgQFe7UYH20DIn8rxFl9aS2xhwYvKba+eX5CceWI/s5Q==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-01T17:46:30Z"
-  mac: ENC[AES256_GCM,data:LMcHWgRC0lAy2uDtvtu9ubZ9jWa1mxGnoaZ3nitzfEKXnn8Qf/ApV/Y2+4utwXrS3Y0aU6J+43WWNmYLC0WdoRDEmLwPrFY296Ub8R3oZkGMOlM8bdZPRIRZW94uTYWkCpcBdCIhfwpfvoqDhYiE/SEC3LSAnFu7bb5fcJp7na8=,iv:YML+hNTN9NAQz7Qx1cmWxyKYbXbyfXi5MNY6nPinqE4=,tag:6TLpVumGBEcacJSuqHK37A==,type:str]
-  pgp: []
+  lastmodified: "2025-06-05T17:37:10Z"
+  mac: ENC[AES256_GCM,data:RIV2ON7tRG9BQWauYa0sy3pUQe6afGVKH8+/qge5eSakcgm11ba6V+wuGDhX9Sfelf6Lrk4NZ9sST311o/JkPMBfHa3yv1lVqwtp28xJ7U68ao0+OO5hK6G8DYCiVVo89nzZycP4+HDRTQYP6tmJ4YvuFuYNfD7zSef0I9NuzHs=,iv:RV0zvMH+AwYndHfBzyqyi7v/ZFtYRYLizMr4ht18jeY=,tag:rLslxfh//w2NdwkzO9v3/A==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
-  version: 3.9.4
+  version: 3.10.2
