--- a/.taskfiles/workstation/resources/Brewfile
+++ b/.taskfiles/workstation/resources/Brewfile
@@ -14,6 +14,7 @@ brew "kubecolor"
 brew "kubeconform"
 brew "kubernetes-cli"
 brew "kustomize"
+brew "minijinja-cli"
 brew "mise"
 brew "siderolabs/tap/talosctl"
 brew "sops"
