feat: expose external service through tailscale

--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -39,6 +39,8 @@ route:
           port: 5005
 service:
   app:
+    annotations:
+      tailscale.com/expose: "true"
     controller: flame
     ports:
       http:
