talconfig: update TS_ROUTES

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -21,7 +21,7 @@ env:
 includes:
   bootstrap: .taskfiles/bootstrap
   talos: .taskfiles/talos
-  utils: .taskfiles/utils
+  workstation: .taskfiles/workstation
 
 tasks:
 
