chore(app-template): remove rules on some httproutes
- https://github.com/onedr0p/home-ops/commit/e3024d7540345ca8388f7625733af186c2a536bb#diff-56ed9680a5323b2e260aadaea1e9ac8d927ace1fd7f66587177b49e359877777

--- a/kubernetes/apps/default/home-assistant/app/helm/values.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helm/values.yaml
@@ -37,7 +37,7 @@ service:
     controller: home-assistant
     ports:
       http:
-        port: &port 8123
+        port: 8123
 route:
   app:
     hostnames:
@@ -47,10 +47,6 @@ route:
       - name: external
         namespace: kube-system
         sectionName: https
-    rules:
-      - backendRefs:
-          - identifier: app
-            port: *port
 persistence:
   config:
     existingClaim: home-assistant
