--- a/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
@@ -80,7 +80,7 @@ spec:
           lbipam.cilium.io/ips: 192.168.20.13
         ports:
           http:
-            port: &port 8096
+            port: 8096
     route:
       app:
         hostnames:
@@ -89,10 +89,6 @@ spec:
           - name: external
             namespace: kube-system
             sectionName: https
-        rules:
-          - backendRefs:
-              - identifier: app
-                port: *port
     persistence:
       config:
         existingClaim: jellyfin
