fix: openebs 4.3.0 change

--- a/kubernetes/apps/openebs-system/openebs/app/helmrelease.yaml
+++ b/kubernetes/apps/openebs-system/openebs/app/helmrelease.yaml
@@ -47,3 +47,9 @@ spec:
         name: openebs-hostpath
         isDefaultClass: false
         basePath: /var/openebs/local
+    alloy:
+      enabled: false
+    loki:
+      enabled: false
+    minio:
+      enabled: false
