chore(app-template): Implement some QoL improvements
- https://github.com/onedr0p/home-ops/commit/fad0f66f4973d9112e281ef1a86d761d21c6d89b

--- a/kubernetes/apps/servarr/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/qbittorrent/app/helmrelease.yaml
@@ -139,7 +139,7 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
     service:
       app:
-        controller: qbittorrent
+        primary: true
         ports:
           http:
             port: *port
