post app-template update chores (#462)
* chore(app-template): remove rules on some httproutes

- https://github.com/onedr0p/home-ops/commit/e3024d7540345ca8388f7625733af186c2a536bb#diff-56ed9680a5323b2e260aadaea1e9ac8d927ace1fd7f66587177b49e359877777

* chore(app-template): Implement some QoL improvements

- https://github.com/onedr0p/home-ops/commit/fad0f66f4973d9112e281ef1a86d761d21c6d89b

* chore: autobrr probe delay

- trying to facilitate sqlite schema upgrade

* more default app-template updates

--- a/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
@@ -74,13 +74,12 @@ spec:
         supplementalGroups: [44, 109]
     service:
       app:
-        controller: jellyfin
         type: LoadBalancer
         annotations:
           lbipam.cilium.io/ips: 192.168.20.13
         ports:
           http:
-            port: &port 8096
+            port: 8096
     route:
       app:
         hostnames:
@@ -89,10 +88,6 @@ spec:
           - name: external
             namespace: kube-system
             sectionName: https
-        rules:
-          - backendRefs:
-              - identifier: app
-                port: *port
     persistence:
       config:
         existingClaim: jellyfin
