--- a/kubernetes/apps/default/home-assistant/app/helm/values.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helm/values.yaml
@@ -34,10 +34,9 @@ defaultPodOptions:
     fsGroupChangePolicy: OnRootMismatch
 service:
   app:
-    controller: home-assistant
     ports:
       http:
-        port: &port 8123
+        port: 8123
 route:
   app:
     hostnames:
@@ -47,10 +46,6 @@ route:
       - name: external
         namespace: kube-system
         sectionName: https
-    rules:
-      - backendRefs:
-          - identifier: app
-            port: *port
 persistence:
   config:
     existingClaim: home-assistant
